# oxi-sapphire-launcher

./: Cargo.toml  README.md
resources/: core_settings.json
src/: cli.rs  client.rs  encryptor.rs  launcher.rs  linux_launcher.rs  lutris_launcher.rs  main.rs  oxi_file_config.rs  settings.rs  windows_launcher.rs
