[package]
name = "oxi-sapphire-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_with = { version = "3.5.0", features = [] }
log = "0.4.20"
env_logger = { version = "0.11.0", features = [] }
clap-serde-derive = { version = "0.2.1", features = [] }
