[package]
name = "oxi-sapphire-launcher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = { version = "3.5.0", features = [] }
log = "0.4.20"
env_logger = { version = "0.11.0", features = [] }
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.79"
physis = "0.1.3"
base64 = "0.21.7"
once_cell = "1.19.0"
glob = "0.3.1"
serde_yaml = "0.9.30"
sysinfo = "0.30.5"
rpassword = "7.3.1"
dirs = "5.0.1"

